k8s/ab-testing-minikube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-fitness-version-a
  labels:
    app: aceest-fitness
    version: v-a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest-fitness
      version: v-a
  template:
    metadata:
      labels:
        app: aceest-fitness
        version: v-a
    spec:
      containers:
      - name: aceest-fitness
        image: saaiarjun27/aceest-fitness:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-fitness-version-b
  labels:
    app: aceest-fitness
    version: v-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest-fitness
      version: v-b
  template:
    metadata:
      labels:
        app: aceest-fitness
        version: v-b
    spec:
      containers:
      - name: aceest-fitness
        image: saaiarjun27/aceest-fitness:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: aceest-fitness-version-a-svc
spec:
  selector:
    app: aceest-fitness
    version: v-a
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: aceest-fitness-version-b-svc
spec:
  selector:
    app: aceest-fitness
    version: v-b
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
