k8s/blue-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-fitness-blue
  labels:
    app: aceest-fitness
    color: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest-fitness
      color: blue
  template:
    metadata:
      labels:
        app: aceest-fitness
        color: blue
    spec:
      containers:
      - name: aceest-fitness
        image: saaiarjun27/aceest-fitness:v1.0
        ports:
        - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-fitness-green
  labels:
    app: aceest-fitness
    color: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest-fitness
      color: green
  template:
    metadata:
      labels:
        app: aceest-fitness
        color: green
    spec:
      containers:
      - name: aceest-fitness
        image: saaiarjun27/aceest-fitness:v2.0
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: aceest-fitness-service-bg
spec:
  selector:
    app: aceest-fitness
    # To switch traffic from Blue to Green, simply change the 'color: blue' to 'color: green'
    color: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
