k8s/canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-fitness-stable
  labels:
    app: aceest-fitness
    track: stable
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aceest-fitness
      track: stable
  template:
    metadata:
      labels:
        app: aceest-fitness
        track: stable
    spec:
      containers:
      - name: aceest-fitness
        image: saaiarjun27/aceest-fitness:v1.0
        ports:
        - containerPort: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-fitness-canary
  labels:
    app: aceest-fitness
    track: canary
spec:
  # The canary deployment gets only 1 replica compared to stable's 3 (so 25% traffic will hit the canary)
  replicas: 1
  selector:
    matchLabels:
      app: aceest-fitness
      track: canary
  template:
    metadata:
      labels:
        app: aceest-fitness
        track: canary
    spec:
      containers:
      - name: aceest-fitness
        image: saaiarjun27/aceest-fitness:v1.1
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: aceest-fitness-service-canary
spec:
  selector:
    # Notice we do not specify the track, so it sends traffic to BOTH stable and canary!
    app: aceest-fitness
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
