k8s/shadow-minikube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-fitness-stable-shadow
  labels:
    app: aceest-fitness
    version: stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest-fitness
      version: stable
  template:
    metadata:
      labels:
        app: aceest-fitness
        version: stable
    spec:
      containers:
      - name: aceest-fitness
        image: saaiarjun27/aceest-fitness:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-fitness-shadow-v2
  labels:
    app: aceest-fitness
    version: shadow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest-fitness
      version: shadow
  template:
    metadata:
      labels:
        app: aceest-fitness
        version: shadow
    spec:
      containers:
      - name: aceest-fitness
        image: saaiarjun27/aceest-fitness:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: aceest-fitness-stable-svc
spec:
  selector:
    app: aceest-fitness
    version: stable
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: aceest-fitness-shadow-svc
spec:
  selector:
    app: aceest-fitness
    version: shadow
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
